examples/datalog/11_types/10_negative_numbers.dl.out
Executing script: examples/datalog/11_types/10_negative_numbers.dl

> .db create test_negative
Database 'test_negative' created.
Switched to database: test_negative
> .db use test_negative
Switched to database: test_negative
> +temps[(1, -10), (2, 5), (3, -20), (4, 15), (5, 0)].
Inserted 5 facts into 'temps'.
> +negatives(Id, T) :- temps(Id, T), T < 0.
Rule 'negatives' registered.
> ?- negatives(X, Y).
2 rows:
  (1, -10)
  (3, -20)
> +non_neg(Id, T) :- temps(Id, T), T >= 0.
Rule 'non_neg' registered.
> ?- non_neg(X, Y).
3 rows:
  (2, 5)
  (4, 15)
  (5, 0)
> +minus_ten(Id, T-10) :- temps(Id, T).
Script error: Line 20: Parse error: Invalid term: 'T-10'
