examples/datalog/11_types/10_negative_numbers.dl
// Test: Negative Numbers
// Category: 11_types
// Description: Tests handling of negative integer values

.db create test_negative
.db use test_negative

// Data with negative values
+temps[(1, -10), (2, 5), (3, -20), (4, 15), (5, 0)].

// Find negative values
+negatives(Id, T) :- temps(Id, T), T < 0.
?- negatives(X, Y).

// Find non-negative values
+non_neg(Id, T) :- temps(Id, T), T >= 0.
?- non_neg(X, Y).

// Arithmetic producing negatives - use head arithmetic
+minus_ten(Id, T-10) :- temps(Id, T).
?- minus_ten(X, Y).

// Comparing negatives
+colder_than_neg5(Id, T) :- temps(Id, T), T < -5.
?- colder_than_neg5(X, Y).

// Sum including negatives
+total_temp(sum<T>) :- temps(_, T).
?- total_temp(S).

// Min/Max with negatives
+min_temp(min<T>) :- temps(_, T).
+max_temp(max<T>) :- temps(_, T).
?- min_temp(M).
?- max_temp(M).

// Cleanup
.db use default
.db drop test_negative
